// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Panel /> create panels 1`] = `
<div
  className="fd-panel"
>
  <div
    className="fd-panel__header"
  >
    <div
      className="fd-panel__head"
    >
      <h3
        className="fd-panel__title"
      >
        Panel Header with Actions
      </h3>
      <p
        className="fd-panel__description"
      >
        Panel Description
      </p>
    </div>
    <div
      className="fd-panel__actions"
    >
      <button
        className="fd-button fd-button--compact sap-icon--add"
      >
        Add New Button
      </button>
    </div>
  </div>
  <div
    className="fd-panel__filters"
  >
    <div>
      Panel Filters
    </div>
    <br />
  </div>
  <div
    className="fd-panel__body"
  >
    <div>
      Panel Body
    </div>
  </div>
  <div
    className="fd-panel__footer"
  >
    Panel Footer
  </div>
</div>
`;

exports[`<Panel /> create panels 2`] = `
<div
  className="fd-panel blue"
>
  <div
    className="fd-panel__header blue"
  >
    <div
      className="fd-panel__head blue"
    >
      <h3
        className="fd-panel__title"
      >
        Panel Header with Actions
      </h3>
      <p
        className="fd-panel__description"
      >
        Panel Description
      </p>
    </div>
    <div
      className="fd-panel__actions blue"
    >
      <button
        className="fd-button fd-button--compact sap-icon--add"
      >
        Add New Button
      </button>
    </div>
  </div>
  <div
    className="fd-panel__filters blue"
  >
    <div>
      Panel Filters
    </div>
    <br />
  </div>
  <div
    className="fd-panel__body blue"
  >
    <div>
      Panel Body
    </div>
  </div>
  <div
    className="fd-panel__footer blue"
  >
    Panel Footer
  </div>
</div>
`;
